# wasmpp

./: .gitignore  .gitmodules  CMakeLists.txt
docs/: index.html
docs/demo/: compiled_model.js  nnb.html  nnb_js.js  nnb_js.wasm
docs/wasmdnn_api/: activation_8h_source.html  analysis_8h_source.html  annotated.html  builtins_8h_source.html  classnn_1_1arch_1_1Model.html  classnn_1_1arch_1_1layer_1_1DenseHiddenLayer.html  classnn_1_1arch_1_1layer_1_1DenseHiddenLayer__coll__graph.md5  classnn_1_1arch_1_1layer_1_1DenseHiddenLayer__inherit__graph.md5  classnn_1_1arch_1_1layer_1_1DenseInputLayer-members.html  classnn_1_1arch_1_1layer_1_1DenseInputLayer.html  classnn_1_1arch_1_1layer_1_1DenseInputLayer__coll__graph.map  classnn_1_1arch_1_1layer_1_1DenseInputLayer__coll__graph.md5  classnn_1_1arch_1_1layer_1_1DenseOutputLayer.html  classnn_1_1arch_1_1layer_1_1DenseOutputLayer__inherit__graph.map  classnn_1_1arch_1_1layer_1_1FullyConnectedLayer.html  classnn_1_1arch_1_1layer_1_1FullyConnectedLayer__coll__graph.map  classnn_1_1arch_1_1layer_1_1FullyConnectedLayer__inherit__graph.map  classnn_1_1arch_1_1layer_1_1FullyConnectedLayer__inherit__graph.md5  classnn_1_1arch_1_1layer_1_1Layer.html  classnn_1_1arch_1_1layer_1_1TypedLayer-members.html  classnn_1_1arch_1_1layer_1_1TypedLayer.html  classnn_1_1arch_1_1layer_1_1TypedLayer__coll__graph.md5  classnn_1_1arch_1_1layer_1_1TypedLayer__inherit__graph.map  classnn_1_1arch_1_1layer_1_1TypedLayer__inherit__graph.md5  classnn_1_1builtins_1_1Activation.html  classnn_1_1builtins_1_1Activation__coll__graph.md5  classnn_1_1builtins_1_1Activation__inherit__graph.map  classnn_1_1builtins_1_1Builtin-members.html  classnn_1_1builtins_1_1Builtin__inherit__graph.map  classnn_1_1builtins_1_1Builtin__inherit__graph.md5  classnn_1_1builtins_1_1Loss.html  classnn_1_1builtins_1_1Loss__coll__graph.map  classnn_1_1builtins_1_1Loss__coll__graph.md5  classnn_1_1builtins_1_1Loss__inherit__graph.md5  classnn_1_1builtins_1_1Math-members.html  classnn_1_1builtins_1_1Math.html  classnn_1_1builtins_1_1Math__inherit__graph.md5  classnn_1_1builtins_1_1System.html  classnn_1_1builtins_1_1System__coll__graph.map  classnn_1_1ds_1_1NDArray-members.html  (+60 more)
docs/wasmdnn_api/html/: analysis_8h_source.html  builtins_8h_source.html  classes.html  classnn_1_1arch_1_1Model-members.html  classnn_1_1arch_1_1layer_1_1DenseHiddenLayer-members.html  classnn_1_1arch_1_1layer_1_1DenseHiddenLayer__coll__graph.map  classnn_1_1arch_1_1layer_1_1DenseHiddenLayer__inherit__graph.map  classnn_1_1arch_1_1layer_1_1DenseInputLayer__inherit__graph.map  classnn_1_1arch_1_1layer_1_1DenseInputLayer__inherit__graph.md5  classnn_1_1arch_1_1layer_1_1DenseOutputLayer-members.html  classnn_1_1arch_1_1layer_1_1DenseOutputLayer__coll__graph.map  classnn_1_1arch_1_1layer_1_1DenseOutputLayer__coll__graph.md5  classnn_1_1arch_1_1layer_1_1DenseOutputLayer__inherit__graph.md5  classnn_1_1arch_1_1layer_1_1FullyConnectedLayer-members.html  classnn_1_1arch_1_1layer_1_1FullyConnectedLayer__coll__graph.md5  classnn_1_1arch_1_1layer_1_1Layer-members.html  classnn_1_1arch_1_1layer_1_1Layer__inherit__graph.map  classnn_1_1arch_1_1layer_1_1Layer__inherit__graph.md5  classnn_1_1builtins_1_1Activation-members.html  classnn_1_1builtins_1_1Activation__inherit__graph.md5  classnn_1_1builtins_1_1Builtin.html  classnn_1_1builtins_1_1Loss-members.html  classnn_1_1builtins_1_1Math.html  classnn_1_1builtins_1_1Math__coll__graph.md5  classnn_1_1builtins_1_1Math__inherit__graph.map  classnn_1_1builtins_1_1System-members.html  classnn_1_1builtins_1_1System.html  classnn_1_1builtins_1_1System__coll__graph.md5  classnn_1_1builtins_1_1System__inherit__graph.md5  classnn_1_1ds_1_1NDArray.html  classnn_1_1snippet_1_1AnalysisSnippet-members.html  classnn_1_1snippet_1_1AnalysisSnippetSimd-members.html  classnn_1_1snippet_1_1AnalysisSnippetSimd__inherit__graph.md5  classnn_1_1snippet_1_1AnalysisSnippet__coll__graph.map  classnn_1_1snippet_1_1AnalysisSnippet__coll__graph.md5  classnn_1_1snippet_1_1AnalysisSnippet__inherit__graph.map  classnn_1_1snippet_1_1AnalysisSnippet__inherit__graph.md5  classnn_1_1snippet_1_1MatrixSnippet-members.html  classnn_1_1snippet_1_1MatrixSnippet.html  classnn_1_1snippet_1_1MatrixSnippetSimd__coll__graph.map  (+47 more)
docs/wasmdnn_api/search/: all_4.js  all_6.js  all_7.js  classes_8.js
docs/wasmdnn_html/: 404.html  index.html
docs/wasmdnn_md/: mkdocs.yml
docs/wasmpp_api/: annotated.html  classes.html  classwasmpp_1_1ContentManager-members.html  classwasmpp_1_1ContentManager.html  classwasmpp_1_1FirstFit-members.html  classwasmpp_1_1FirstFit.html  classwasmpp_1_1FirstFit__coll__graph.md5  classwasmpp_1_1FirstFit__inherit__graph.map  classwasmpp_1_1FirstFit__inherit__graph.md5  classwasmpp_1_1LabelManager-members.html  classwasmpp_1_1LabelManager.html  classwasmpp_1_1Memory-members.html  classwasmpp_1_1Memory.html  classwasmpp_1_1MemoryManager-members.html  classwasmpp_1_1MemoryManager.html  classwasmpp_1_1MemoryManager__inherit__graph.map  classwasmpp_1_1MemoryManager__inherit__graph.md5  classwasmpp_1_1ModuleManager-members.html  classwasmpp_1_1ModuleManager.html  common_8h.html  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h__incl.map  common_8h__incl.md5  common_8h_source.html  dir_0b887e2898cd51292fbe6836540cc007.html  files.html  functions.html  functions_enum.html  functions_func.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  (+21 more)
docs/wasmpp_html/: 404.html  index.html
docs/wasmpp_md/: mkdocs.yml
js/: node.js
py/: logic.py  mnist.py  nn.py
reference/: logic.py
scripts/: build_demo.sh  build_docs.sh  build_doxygen.sh
src/: main.cc
src/wasm/: wasm-builder.cc  wasm-builder.h
src/wasmpp/: common.cc  common.h  wasm-builder.cc  wasm-builder.h  wasm-instructions-gen.cc  wasm-instructions-gen.h  wasm-instructions.cc  wasm-instructions.h  wasm-manager.cc  wasm-manager.h
(+164 files in other folders)
